deploy-app/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: garage-namespace
  labels:
    istio-injection: enabled
